--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     background-size: cover; /* Ensures the image covers the entire page */
     background-position: center center; /* Centers the image */
     background-repeat: no-repeat; /* Prevents the image from repeating */
-    background-color: rgb(89, 89, 89); /* Fallback color if the image doesn't load */
+    background-color: rgb(140, 140, 140) /* Fallback color if the image doesn't load */
     opacity: 0.9; /* Adjust the value between 0 (fully transparent) and 1 (fully opaque) */
 }
 
@@ -20,6 +20,11 @@ body {
 h1 {
     color: rgb(81, 81, 81);
     font-size: 30px;
+}
+
+h2 {
+    color: rgb(81, 81, 81);
+    font-size: 20px;
 }
 
 textarea {
