--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ textarea {
     height: 100px;
     margin: 10px;
     font-size: large;
-    color: lightgray;
+    color: rgb(225, 225, 225);
     background-color: rgb(81, 81, 81);
 }
 
@@ -40,14 +40,14 @@ button {
     margin: 5px;
     padding: 10px 20px;
     font-size: 16px;
-    color: rgb(42, 42, 42);
-    background-color: gray
+    color: rgb(225, 225, 225);
+    background-color: rgb(81, 81, 81);
 }
 
 #keyboardPanel button {
     font-size: 16px;
     text-align: center;
-    color: rgb(79, 79, 79);
+    color: rgb(225, 225, 225);
     padding: 10px;
 }
 
