--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* --- Page styles --- */
 /* home-page */
 .home-page {
-    background-image: url(foxy.png);
+    background-image: url(fennfox.png);
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
